[gd_scene load_steps=2 format=2]

[ext_resource path="res://screen_main.gd" type="Script" id=1]

[node name="screen_main" type="Node2D"]
script = ExtResource( 1 )

[node name="text_usuario" type="LineEdit" parent="."]
margin_left = 131.0
margin_top = 454.0
margin_right = 922.0
margin_bottom = 571.0

[node name="btn_lista_preenchida" type="Button" parent="."]
margin_left = 277.0
margin_top = 375.0
margin_right = 394.0
margin_bottom = 405.0
text = "Lista Preenchida Autom√°tica"

[node name="btn_lista_personalizada" type="Button" parent="."]
margin_left = 130.0
margin_top = 375.0
margin_right = 264.0
margin_bottom = 405.0
rect_pivot_offset = Vector2( 1, 0 )
text = "Lista Personalizada"

[node name="text_criar2" type="Label" parent="."]
margin_left = 130.0
margin_top = 429.0
margin_right = 170.0
margin_bottom = 450.0
text = "INSIRA SEU TEXTO PARA CRIAR UMA LISTA"

[node name="text_criar" type="Label" parent="."]
margin_left = 131.0
margin_top = 342.0
margin_right = 171.0
margin_bottom = 356.0
text = "CRIAR"

[node name="exibir_text" type="RichTextLabel" parent="."]
modulate = Color( 0.988235, 0.988235, 0.988235, 1 )
margin_left = 128.0
margin_top = 95.0
margin_right = 921.0
margin_bottom = 298.0
text = "Lista de compras:

"

[node name="btn_apagar_lista" type="Button" parent="."]
margin_left = 480.0
margin_top = 375.0
margin_right = 614.0
margin_bottom = 405.0
text = "Apagar Lista"

[node name="btn_colocarText" type="Button" parent="."]
margin_left = 628.0
margin_top = 376.0
margin_right = 781.0
margin_bottom = 406.0
text = "colocar texto"

[connection signal="pressed" from="btn_lista_preenchida" to="." method="_on_btn_lista_preenchida_pressed"]
[connection signal="pressed" from="btn_lista_personalizada" to="." method="_on_btn_lista_vazia_pressed"]
[connection signal="pressed" from="btn_apagar_lista" to="." method="_on_btn_apagar_lista_pressed"]
[connection signal="pressed" from="btn_colocarText" to="." method="_on_btn_colocarText_pressed"]
